--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ button:hover {
 
     <section class="hero">
         <div class="hero__wrapper">
-            <div class="hero__item hero-item-1" style="background-image: url(/assets/img/bg.png);"></div>
-            <div class="hero__item hero-item-2" style="background-image: url(/assets/img/tree.png);"></div>
+            <div class="hero__item hero-item-1" style="background-image: url(assets/img/bg.png);"></div>
+            <div class="hero__item hero-item-2" style="background-image: url(assets/img/tree.png);"></div>
             <div class="hero__item hero-item-3">
                 <div class="hero__content">
                     <h1 class="title">
